--- a/slides/EDUC641_4_continuous_3.html
+++ b/slides/EDUC641_4_continuous_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Null Hypothesis Significance Testing critiques</title>
+    <title>Null-Hypothesis Significance Testing (NHST) critiques</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
     <script src="EDUC641_4_continuous_3_files/header-attrs-2.9/header-attrs.js"></script>
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Null Hypothesis Significance Testing critiques
+# Null-Hypothesis Significance Testing (NHST) critiques
 ## EDUC 641: Week XX
 ### TBD
 
@@ -173,6 +173,24 @@ Not surprisingly, I've updated my beliefs and now think there is a greater-than-
 
 &lt;span style="color:red"&gt; *Much more complexity to be explored in another course*&lt;/red&gt;
 
+---
+# A path forward...
+
+So where does all this leave us? Some recommendations for moving forward:
+1. Move beyond a single metric to evaluate practice and theory
+ - Multiple studies w/ focus on generalizability
+ - Replication studies
+ - Systematic reviews/meta-analysis
+ - Focus on *confidence intervals* and *magnitude* of effects (**more in EDUC 643**)
+
+2. Open Science
+ - Pre-registration (REES, OSF, etc.)
+ - Registered reports
+ - Public materials and data
+ - Use of scripts!!!
+ - Statistical tests (GRIM, SPRITE, etc.)
+
+3. Changes in academic incentives
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
