slide updates cont1

--- a/slides/continuous_l2.html
+++ b/slides/continuous_l2.html
@@ -14,7 +14,7 @@ class: center, middle, inverse, title-slide
 
 # EDUC 641 Continuous Data
 ### Professor Name
-### 16 August, 2021
+### 19 August, 2021
 
 ---
 
@@ -71,7 +71,7 @@ Shape:
 
 * The area under a normal distribution is always equal to 100% (it represents the whole of observations)
 
-* The area under the normal distribution curve corresponds to the percentage of observations
+* The area under the normal distribution curve corresponds to the percentage of observations.
 
 * We can always infer the percentage of observations in any part of a normal distribution.
 
@@ -96,27 +96,65 @@ We can use our understanding of the normal distribution to calculate the probabi
 * A randomly selected observation has an approximately **95.5% chance of being within 2 SD** of the mean.
  + $ P(-2 &lt; Z &lt; 2) = 0.955 $
 
-* With a standard normal distribution, we can calculate the percentage of observations under any region.
+---
+# What is normal?
+
+* A normal distribution can take on any mean and standard deviation.
+
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
+* The area under the curve is always equal to 1.
+* The empirical rule applies to all normal distributions (e.g., 68% of observations occur within 1 SD of the mean).
+---
+
+# Standard Normal Distribution
+
+* The **standard** normal distribution has a mean of 0 and a standard deviation of 1.
+  
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+
+* The x-axis represents z-scores, meaning an observation's value represents how far it is from the mean.
+
+  + A z-score of -1 indicates that an observation is 1 SD below the mean.
+  + A z-score of +2 indicates that an observation is 2 SD above the mean.
+
+* With a standard normal distribution, we can easily calculate the percentage of observations under any region.
 
 ---
 # Z-Test
+
+
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
+To answer this question, we just need to find the area of the shaded portion under the curve.
+
+---
+# Z-Test
+
+* We can either use a computational tool or a z-score look-up table to calculate the area under the normal curve.
+
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+
+Either approach would show the area above 1.5 SD of a standard normal curve is .07. Therefore, the probability of scoring above 1.5 SD on a standardized test is 7%.
+
+---
+# Z-Test
+Let's try it with our WHO data:
 * Suppose that the population mean national life expectancy is 71.64 `\((\mu)\)` with a SD of 8.15 `\((\sigma)\)`.
 
 * **Assuming a normal distribution, what is the probability of randomly selecting a country with a life expectancy greater than 76?**
 
-* After we conduct a z-transformation, we can calculate the percentage of observations above our z-score.
+* First we need to standardize our value before we can calculate the percentage of observations above our z-score.
 
 $$ z = \frac{76-71.64}{8.15} = 0.53$$
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
 
 
 ---
 # Z-Test
-* The probability of randomly selecting a country with a national life expectancy greater than 76 is 30%.
-  + $ P(z &gt; 0.53) = 0.30 $
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+* The area under the curve above a z-score of 0.53 is .30. Therefore, the probability of randomly selecting a country with a national life expectancy greater than 76 is 30%.
+
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # Population vs. Sample Distributions
@@ -129,13 +167,13 @@ Our **population statistic** represents the true value across all countries.
 
 
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-12-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
 Our **sample statistic** will be our estimate of the population statistic using the countries we examine.
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -149,7 +187,7 @@ Our **sample statistic** will be our estimate of the population statistic using 
 
 
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # Population vs. Sample Distribution
@@ -159,7 +197,7 @@ If we sample our population **100 times** and plot the estimated mean of each sa
 
 
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-13-.gif" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-17-.gif" style="display: block; margin: auto;" /&gt;
 
 The mean of our sampling distribution (mean of means) approximates the &lt;span style="color: blue;"&gt; population mean&lt;/span&gt;. This is an example of the **central limit theorem**.
 
@@ -191,7 +229,7 @@ $$ \sigma_\bar{X} = \frac{\sigma}{\sqrt{n}}$$
 * The standard deviation is the standard error of the mean.
 {https://onlinestatbook.com/stat_sim/sampling_dist/}
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-19-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # T-Tests
@@ -217,7 +255,7 @@ $$ \sigma_\bar{X} = \frac{\sigma}{\sqrt{n}}$$
 ]
 
 .pull-right[
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-16-.gif" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-20-.gif" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -248,7 +286,7 @@ $$ t = \frac{\bar{X} - \mu}{\hat{\sigma}/\sqrt{n}} $$
 ]
 
 .pull-right[
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-18-.gif" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-22-.gif" style="display: block; margin: auto;" /&gt;
 ]
 ---
 ## Applying a t-test
@@ -256,7 +294,7 @@ Suppose we have data from a sample of 10 countries with a mean life expectancy o
 
 If our population mean is thought to be 78.16 `\((H_0: \sigma = 78.16)\)`, what is the probability of obtaining a sample mean of 66.87, **or a more extreme mean value**, due to random sampling variability?
 `$$t(9) = \frac{66.87 - 75.16}{5.82/\sqrt{9}} = -1.24$$`
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-19-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-23-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # Applying a t-test
@@ -264,13 +302,13 @@ If our population mean is thought to be 78.16 `\((H_0: \sigma = 78.16)\)`, what 
 Assuming a population mean of 78.16 and sample size of 10...
 
 .pull-left[
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-20-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-24-1.png" style="display: block; margin: auto;" /&gt;
 
 ...the proportion of random samples that would demonstrate a sample mean **equal to or lower than 66.87** is 0.12 (i.e., *p* = 0.12).
 ]
 
 .pull-right[
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-21-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-25-1.png" style="display: block; margin: auto;" /&gt;
 ...the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 (i.e., *p* = 0.24).
 ]
 
@@ -294,7 +332,7 @@ Assuming a population mean of 78.16 and sample size of 10...
 * Critical t-values `\(t_{\alpha/2}(df)\)` are the thresholds at which our alpha threshold is met.
   + Vary depending on `\(df\)` and `\(\alpha\)`
   
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-22-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-26-1.png" style="display: block; margin: auto;" /&gt;
 
 With two-tailed tests, the total alpha is "split" across both tails of the distribution `\((\alpha(.05)/2 = .025)\)`.
 
@@ -304,12 +342,12 @@ With two-tailed tests, the total alpha is "split" across both tails of the distr
 
 .pull-left[
 Our observed t-value did not surpass our critical t-values.
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-23-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-27-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
 Our p-value is not less than .05 and does not satisfy our alpha threshold.
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-24-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-28-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 Assuming a population mean of 78.16 and sample size of 10, the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 `\((t = -1.24, p = 0.24)\)`. Because our p-value does not meet our alpha threshold of .05, we **fail to reject the null hypothesis**.
@@ -352,25 +390,142 @@ An outcome can be more or less unlikely with a equally weighted die, but the die
 
 
 ```
-## # A tibble: 6 x 7
+## # A tibble: 6 × 7
 ## # Groups:   x_bin [4]
-##   region       status      year life_expectancy x_bin x_mid     y
-##   &lt;chr&gt;        &lt;chr&gt;      &lt;int&gt;           &lt;dbl&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 Senegal      Developing  2015              67     4  67.5     1
-## 2 Sierra Leone Developing  2015              51     1  52.5     1
-## 3 Uzbekistan   Developing  2015              69     4  67.5     2
-## 4 Haiti        Developing  2015              64     3  62.5     1
-## 5 Tunisia      Developing  2015              75     5  72.5     1
-## 6 Cambodia     Developing  2015              69     4  67.5     3
+##   region      status      year life_expectancy x_bin x_mid     y
+##   &lt;chr&gt;       &lt;chr&gt;      &lt;int&gt;           &lt;dbl&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;
+## 1 Mali        Developing  2015              58     2  57.5     1
+## 2 Burundi     Developing  2015              60     2  57.5     2
+## 3 Afghanistan Developing  2015              65     3  62.5     1
+## 4 Honduras    Developing  2015              75     5  72.5     1
+## 5 Rwanda      Developing  2015              66     4  67.5     1
+## 6 Lebanon     Developing  2015              75     5  72.5     2
 ```
 
-&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-25-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-29-1.png" style="display: block; margin: auto;" /&gt;
 
 
 ---
-# Two-Sample t-test
+# Independent Two-Sample t-test
+
+* An independent samples t-test is a comparison of the means from two different groups.
+
+* Enables a researchers to test for a significant difference between two groups.
+ + e.g., Does the life expectancy of high-income countries significantly differ from low-income countries?
+
+* Independent samples means a subject can only belong to one group. 
+
+$$ H_0: \mu_1 = \mu_2 $$
+$$ H_1: \mu_1 != \mu_2 $$
+---
+# Independent Two-Sample t-test
+
+If our null hypothesis is `\(H_0: \mu_1 = \mu_2\)`, then `\(\mu_1 - \mu_2\)` should also equal 0.
+
+To calculate our test statistic we use the following formula:
+
+$$ t = \frac{\bar{X}_1 - \bar{X}_2}{SE} $$
+Assuming there is no difference between our sample means (null hypothesis is true), our t will always equal zero. 
+
+$$ t = \frac{0}{SE} = 0 $$
+Our standard error refers to the `\(\sigma\)` for the sampling distribution of the **difference in means**. This is more complicated to calculate.
+---
+# Sampling a difference in means
+
+Population X - `\(\mu_X\)`
+
+Population Y- `\(\mu_Y\)`
+
+`$$\mu_X - \mu_Y$$`
+Sample 1 of Group X - `\(\bar{x}_1\)`
+
+Sample 1 of Group Y - `\(\bar{y}_1\)`
+
+`$$\bar{x}_1 - \bar{y}_1$$`
+Sample 2 of Group X - `\(\bar{x}_2\)`
+
+Sample 2 of Group Y - `\(\bar{y}_2\)`
+
+`$$\bar{x}_2 - \bar{y}_2$$`
+---
+# Sampling a difference in means
+
+Suppose we have two populations of students - students with infrequent school attendance and students who attend school regularly. On our standardized test, students with infrequent attendance have an average score of 95 `\(\mu_x = 95)\)` and students with regular attendance have an average score of 104 `\(\mu_x = 104)\)`. Thus, our true difference in means is 9.
 
 
+Just like with our one-sample t-test, every time we sample each population, we obtain a new estimated difference between the two groups. The estimated difference in means forms its own normal distribution.
+
+.pull-left[
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-31-.gif" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-32-.gif" style="display: block; margin: auto;" /&gt;
+]
+---
+# Central Limit Theorem
+
+Given two populations such that the mean is `\(\mu_X\)` and standard deviation is `\(\sigma\)` for Population 1 and the mean is `\(\mu_Y\)` and standard deviation is `\(\sigma\)` for Population 2, the sampling distribution of the difference in sample means is a normal distribution with a mean equal to `\(\mu_X - \mu_Y\)` and standard deviation equal to `\(\sqrt{\frac{\sigma^2}{n_1} + \frac{\sigma^2}{n_2}}\)`, where `\(n_1\)` and `\(n_2\)` are the sample sizes.
+
+Notice we have only one `\(\sigma\)` for both groups? This is an assumption of **homogeneity of variance**, meaning they share the same population variance despite differences in their means.
+
+---
+# Estimating Variance
+
+Since we rarely know the population standard deviation, we have to calculate a **pooled standard deviation** to estimate the populations standard deviation.
+
+$$\hat{\sigma} = \sqrt{\frac{(n_1-1)s_1 + (n_2-1)s_2 }{n_1+n_2-2}} $$
+* Sample sizes do not need to be equal.
+
+* Our degrees of freedom for an independent sample t-test is represented by `\(n_1+n_2-2\)`.
+
+---
+# Calculating the Standard Error
+
+Our standard error of the difference in mean `\((\sigma_D)\)` is calculated from our pooled standard deviation `\((\hat{\sigma}_D)\)` and sample sizes.
+
+$$SE(\sigma_D) = \sqrt{\frac{\hat{\sigma}^2}{n_1} + \frac{\hat{\sigma}^2}{n_2}} $$
+
+Then we just have to insert our standard error into our formula to find our test statistic.
+
+$$ t = \frac{\bar{X}_1 - \bar{X}_2}{SE} = \frac{\bar{X}_1 - \bar{X}_2}{\sqrt{\frac{\hat{\sigma}^2}{n_1} + \frac{\hat{\sigma}^2}{n_2}}}$$
+---
+# Independent Samples T-Test
+Null Hypothesis: Students with infrequent attendance have equal achievement scores to students with regular attendance.
+$$ H_0: \mu_1 = \mu_2 $$
+* Sample Sizes:
+  + `\(n_1 = 12\)`
+  + `\(n_2 = 76\)`
+* Means:
+  + `\(\bar{X_1} = 94.78\)`
+  + `\(\bar{X_2} = 103.22\)`
+* Sample Variance:
+  + `\(s_1 = 11.59\)`
+  + `\(s_2 = 10.26\)`
+  
+$$\hat{\sigma} = \sqrt{\frac{(12-1)11.59 + (76-1)103.22 }{12+76-2}} = 9.57 $$
+Observed Mean Difference `\((\bar{X}_1 - \bar{X}_2)\)` = `\(94.78 - 103.22 = -8.44\)`
+
+---
+# Independent Samples T-Test
+**Null Hypothesis:** Students with infrequent attendance have equal achievement scores to students with regular attendance.
+
+$$ H_0: \mu_1 = \mu_2 $$
+
+Pooled variance `\((\hat{\sigma})\)` = 9.57
+
+Sample Mean Difference `\((\bar{X}_1 - \bar{X}_2)\)` = `\(-8.44\)`
+
+$$  t = \frac{\bar{X}_1 - \bar{X}_2}{SE} = \frac{-8.44}{\sqrt{\frac{{9.57}^2}{12} + \frac{{9.57}^2}{76}}} = \frac{-8.44}{2.97} - -2.84$$
+If the null hypothesis is true, what is the probability of observing a t-statistic of -2.84, or a more extreme value (degrees of freedom = 86)?
+---
+
+The p-value for a two-tailed test with a t-value of -2.84 and degrees of freedom is .006. 
+&lt;img src="continuous_l2_files/figure-html/unnamed-chunk-33-1.png" style="display: block; margin: auto;" /&gt;
+
+Assuming the null hypothesis is true, the probability of obtaining a difference in sample means of +/- 8.44 or greater is .006. Because this is highly unlikely (p = .006 &lt; .05), we can **reject the null hypothesis**.
+
+---
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
