--- a/slides/continuous_l2.html
+++ b/slides/continuous_l2.html
@@ -122,6 +122,7 @@ We can use our understanding of the normal distribution to calculate the probabi
 ---
 # Z-Test
 
+Suppose we wanted to know the probability of scoring at least 1.5 SD above the mean on a standardized test. 
 
 &lt;img src="continuous_l2_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
 To answer this question, we just need to find the area of the shaded portion under the curve.
